fixes vertical alignment of text in clickable boxes on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ hr{
 .scorebox-toggle{
     height: 100%;
     width: 100%;
-    padding-top: 25px;
+    margin-top: 25px;
 }
 
 .lower-scorecard{
